# SystemPlatform

./: CMakeLists.txt
NetworkModule/Client/: CMakeLists.txt
NetworkModule/Client/include/: client.h
NetworkModule/Client/src/: client.cpp  main.cpp
NetworkModule/Client/src/core/: client.cpp  connection.cpp
NetworkModule/Server/: CMakeLists.txt
NetworkModule/Server/include/: server.h
NetworkModule/Server/src/core/: server.cpp
Telecom/: CMakeLists.txt
Telecom/include/: server.h
Telecom/src/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  server
Telecom/src/core/: server.cpp
Telecommunication/: CMakeLists.txt
Telecommunication/ProviderSimulation/ProviderSimulation.xcodeproj/: project.pbxproj
Telecommunication/ProviderSimulation/ProviderSimulation.xcodeproj/project.xcworkspace/xcuserdata/mykhailokhymochko.xcuserdatad/: UserInterfaceState.xcuserstate
Telecommunication/ProviderSimulation/ProviderSimulation.xcodeproj/xcuserdata/mykhailokhymochko.xcuserdatad/xcschemes/: xcschememanagement.plist
Telecommunication/ProviderSimulation/ProviderSimulation/includes/: BaseStation.h  CentralNode.h  Client.h
Telecommunication/ProviderSimulation/ProviderSimulation/src/: main  main.cpp
Telecommunication/ProviderSimulation/ProviderSimulation/src/core/: BaseStation.cpp  CentralNode.cpp  Client.cpp
Telecommunication/ProviderSimulation/ProviderSimulation/src/main.dSYM/Contents/Resources/DWARF/: main
Telecommunication/ProviderSimulation/ProviderSimulation/src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
cmake/: config.h.in
core/database/: CMakeLists.txt
core/database/include/: database_datamodule.h
core/database/src/: main.cpp
core/database/src/core/: database_datamodule.cpp
core/datamanagement/: CMakeLists.txt
core/datamanagement/include/: database_datamodule.h
core/datamanagement/src/: main.cpp
core/datamanagement/src/core/: database_datamodule.cpp
core/network/: CMakeLists.txt
core/network/client/: CMakeLists.txt
core/network/client/include/: client.h  connection.h
core/network/client/src/core/: client.cpp  connection.cpp
core/network/include/: network_module.h
core/network/server/: CMakeLists.txt
core/network/server 2/include/: network_module.h
core/network/server/include/: network_module.h
core/network/server/src/: main.cpp
core/network/server/src/core/: network_module.cpp
core/network/src/: main.cpp
core/network/src/core/: network_module.cpp
core/security/: CMakeLists.txt
core/security/include/: CryptoManager.h
core/src/: main.cpp
core/web/front/test-primeng-project/: README.md  angular.json  package-lock.json  package.json
core/web/front/test-primeng-project/src/: index.html  main.ts
core/web/front/test-primeng-project/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts
core/web/front/test-primeng-project/src/app/github-commit/: github-commit.component.css  github-commit.component.html  github-commit.component.spec.ts  github-commit.component.ts
core/web/front/test-primeng-project/src/app/navigation/: navigation.component.ts
core/web/frontend/iot-frontend/: README.md  angular.json  package-lock.json  package.json
core/web/frontend/iot-frontend/src/: main.ts
core/web/frontend/iot-frontend/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
core/web/frontend/iot-frontend/src/app/components/dashboard/: dashboard.component.css  dashboard.component.html
core/web/frontend/iot-frontend/src/app/components/github-heatmap/: github-heatmap.component.spec.ts  github-heatmap.component.ts
core/web/frontend/iot-frontend/src/app/components/navigation/: navigation.component.css  navigation.component.html  navigation.component.ts
core/web/frontend/iot-frontend/src/app/services/: github.service.ts
tests/: CMakeLists.txt  network_module_test.cpp
